<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".PostAnOffer">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:background="#AAFFFFFF"
                android:gravity="center"
                >

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:background="#fff"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/gradientbackground"
                            android:orientation="vertical"
                            android:layout_marginRight="3dp"
                            android:layout_marginLeft="3dp">

                            <de.hdodenhof.circleimageview.CircleImageView
                                xmlns:app="http://schemas.android.com/apk/res-auto"
                                android:id="@+id/card_img"
                                android:layout_width="200dp"
                                android:layout_height="75dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="5dp"
                                app:civ_border_width="2dp"
                                app:civ_border_color="#FF000000"
                                />

                            <TextView
                                android:id="@+id/card_user_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp"
                                android:text="Wecome"
                                android:textColor="#fff"
                                android:textSize="21sp"
                                android:textStyle="bold"
                                />
                        </LinearLayout>

                        <androidx.cardview.widget.CardView
                            xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="125dp"
                            card_view:cardCornerRadius="10dp"
                            card_view:cardElevation="3dp"
                            card_view:cardUseCompatPadding="true"
                            android:layout_marginRight="7dp"
                            android:layout_marginLeft="7dp"
                            >


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal"
                                >




                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical">
                                    <TextView
                                        android:id="@+id/card_user_name_2"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="Welcome Back !"
                                        android:textSize="15dp"
                                        />


                                </LinearLayout>
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>
                    </RelativeLayout>



            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"

                />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_margin="7dp"
                    >

                    <Button

                        android:id="@+id/id_Domain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_domoain"
                        android:theme="@style/FlatButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:background="@color/myWeight"
                        android:textColor="#1f1f7a"
                        android:fontFamily="@font/dancing_script"
                        android:textSize="17dp"
                        android:drawableRight="@drawable/three_dots"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/id_TextDomaine"
                        android:textColor="@color/colorPrimary"
                        />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_margin="7dp"
                    >

                    <Button

                        android:id="@+id/id_Type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_type"
                        android:theme="@style/FlatButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:background="@color/myWeight"
                        android:textColor="#1f1f7a"
                        android:fontFamily="@font/dancing_script"
                        android:textSize="17dp"
                        android:drawableRight="@drawable/three_dots"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/id_TextType"
                        android:textColor="@color/colorPrimary"
                        />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_margin="7dp"
                    >

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:theme="@style/FlatButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:background="@color/myWeight"
                        android:textColor="#1f1f7a"
                        android:fontFamily="@font/dancing_script"
                        android:textSize="17dp"
                        android:drawableRight="@drawable/three_dots"
                        android:id="@+id/id_Requiremments"
                        android:text="@string/requiremments"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/id_TextRequiremments"
                        android:textColor="@color/colorPrimary"
                        />

                </LinearLayout>

            </TableRow>

            <TableRow

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_margin="7dp"
                    >

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:theme="@style/FlatButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:background="@color/myWeight"
                        android:textColor="#1f1f7a"
                        android:fontFamily="@font/dancing_script"
                        android:textSize="17dp"
                        android:drawableRight="@drawable/three_dots"

                        android:id="@+id/id_Skills"
                        android:text="@string/skills_and_experiences"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/id_TextSkills"
                        android:textColor="@color/colorPrimary"
                        />

                </LinearLayout>

            </TableRow>
            <TableRow

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_margin="7dp"
                    >

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:theme="@style/FlatButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:background="@color/myWeight"
                        android:textColor="#1f1f7a"
                        android:fontFamily="@font/dancing_script"
                        android:textSize="17dp"
                        android:drawableRight="@drawable/three_dots"

                        android:id="@+id/id_Ville_prefere"
                        android:text="@string/Ville_prefere"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/id_TextVillePrefere"
                        android:textColor="@color/colorPrimary"
                        />

                </LinearLayout>

            </TableRow>
            <TableRow

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_margin="7dp"
                    >

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:theme="@style/FlatButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:background="@color/myWeight"
                        android:textColor="#1f1f7a"
                        android:fontFamily="@font/dancing_script"
                        android:textSize="17dp"
                        android:drawableRight="@drawable/three_dots"

                        android:id="@+id/id_periode_de_stage"
                        android:text="@string/Periode_stage"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/id_TextPeriodeStage"
                        android:textColor="@color/colorPrimary"
                        />

                </LinearLayout>

            </TableRow>

            <TableRow

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_margin="20dp"
                    >

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"


                        android:text="@string/postuler"
                        android:theme="@style/FlatButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:background="@color/myWeight"
                        android:textColor="@color/colorPrimary"


                        android:id="@+id/postule_Btn"

                        />



                </LinearLayout>

            </TableRow>
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adViewe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
            </com.google.android.gms.ads.AdView>

        </TableLayout>




    </RelativeLayout>
</ScrollView>